# raven

./: .gitignore  .gitmodules  .gitmodules.swp  CMakeLists.txt  Makefile  README.md  TODO  conf.sh  debug.sh  names.txt  setup.sh  shell.nix  toolchain.cmake
.github/workflows/: act.yml  build.yml
lib/: debouncer.cmake  free_rtos.cmake  lvgl.cmake  stm_cube.cmake
misc/: bg.sh  f  icon.sh  img.sh  shell.nix  stucki.py
misc/ravenicons/: close.c  continue.c  continue_left.c  continue_right.c  flag.c  roundabout_left.c  roundabout_right.c  turn_left.c  turn_right.c  turn_sharp_left.c  turn_sharp_right.c  turn_slight_left.c  turn_slight_right.c  uturn.c
src/: FreeRTOSConfig.h  lv_conf.h
src/app/: app.hpp  app_common.h  app_conf.h  app_debug.c  app_debug.cpp  common.hpp  conf.hpp  debug.cpp  debug.hpp
src/ble/: ble.cpp  ble.hpp  ble_app.c  ble_app.h  ble_conf.h  char.cpp  char.hpp  gatt_service.c  gatt_service.cpp  gatt_service.h  gatt_service.hpp  service.cpp  service.hpp  tl_dbg_conf.h  uuid.cpp  uuid.hpp
src/core/: .main.c.swp  img.cpp  img.hpp  main.c  main.cpp  main.h  main.hpp  syscalls.c  sysmem.c
src/core/examples/template/Src/: main.c
src/display/: axel_20_text.c  axel_22_ui.c  controller.cpp  controller.hpp  display.cpp  display.hpp  eink.cpp  eink.hpp  face.cpp  face.hpp  gloock_18_date.c  gloock_70_time.c  gloock_75_time.c  gloock_80_time.c  lato_18.c  lvgl.cpp  lvgl.hpp  sunflower_80.c  tag_70.c
src/display/fonts/: axel_20_text.c  axel_22_ui.c  axel_text.c  axel_time_date.c  axel_ui.c  gloock_date.c  gloock_time.c  montserrat_time.c  roboto_date.c  roboto_dow.c  seg.c  tag.c
src/display/icons/: close.c  continue.c  continue_left.c  continue_right.c  flag.c  image1.c  image1_face_bg.c  image2.c  image2_face_bg.c  image_face_bg.c  roundabout_left.c  roundabout_right.c  tag.c  turn_left.c  turn_right.c  turn_sharp_left.c  turn_sharp_right.c  turn_slight_left.c  turn_slight_right.c  uturn.c
src/gpio/: gpio.cpp  gpio.h  gpio.hpp  gpio_controller.c  gpio_controller.h
src/haptic/: haptic.cpp  haptic.hpp
src/hw/: common.hpp  conf.hpp  hw_if.h  hw_ipcc.c  hw_ipcc.cpp  if.hpp  ipcc.cpp
src/rtos/: rtos.cpp  rtos.hpp
src/services/: data.cpp  data.hpp  event.cpp  event.hpp  info.cpp  info.hpp  music.cpp  music.hpp  nav.cpp  nav.hpp  notify.cpp  notify.hpp  pref.cpp  pref.hpp  simple.cpp  simple.hpp  time.cpp  time.hpp
src/stm32/: stm32wbxx_hal_conf.h  stm32wbxx_it.c  stm32wbxx_it.cpp  stm32wbxx_it.h
src/sys/: i2c.cpp  i2c.hpp  spi.cpp  spi.hpp  state.cpp  state.hpp  sys.cpp  sys.hpp
